deploy/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wbgt
  labels:
    app.kubernetes.io/name: wbgt
    app.kubernetes.io/part-of: wbgt
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: production-gateway-01
      namespace: default
  hostnames:
    - wbgt.sut.ac.th
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: wbgt-backend
          port: 10000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wbgt-frontend
          port: 80
